[package]
name = "psn_api_rs"
version = "0.2.1"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"
description = "A simple PSN Network API wrapper"
keywords = ["game", "playstation", "psn"]
license = "MIT"
exclude = ["examples/*"]
repository = "https://github.com/fakeshadow/psn_api_rs"
readme= "README.md"

[lib]
name = "psn_api_rs"
path = "src/lib.rs"

[workspace]
members = [
  "examples/basic",
  "examples/trait_only"
]

[features]
default = [ "hyper", "hyper-tls", "serde_urlencoded", "tokio" ]

[dependencies]
derive_more = "0.14.1"
hyper = { version = "0.13.4", optional = true, default-features = false }
hyper-tls = { version = "0.4.1", optional = true }
rand = "0.7.1"
serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0.40"
serde_urlencoded = { version = "0.6.1", optional = true }
tokio = { version = "0.2.16", optional = true, default-features = false, features = ["fs"] }

[dev-dependencies]
tokio = "0.2.16"