[package]
name = "psn_api_rs"
version = "0.3.0"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"
description = "A simple PSN Network API wrapper"
keywords = ["game", "playstation", "psn"]
license = "MIT"
exclude = ["examples/*"]
repository = "https://github.com/fakeshadow/psn_api_rs"
readme= "README.md"

[lib]
name = "psn_api_rs"
path = "src/lib.rs"

[workspace]
members = [
  "examples/basic",
  "examples/proxy",
  "examples/trait_only"
]

[features]
default = [ "crossbeam-queue", "reqwest", "serde_urlencoded", "tang-rs", "tokio" ]

[dependencies]
crossbeam-queue = { version = "0.2.1", optional = true }
derive_more = "0.14.1"
rand = "0.7.1"
reqwest = { version = "0.10.4", features = [ "json" ], optional = true }
serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0.40"
serde_urlencoded = { version = "0.6.1", optional = true }
tang-rs = { version = "0.1.0", optional = true }
tokio = { version = "0.2.16", optional = true, default-features = false, features = ["fs"] }

[dev-dependencies]
tokio = "0.2.16"