[package]
name = "basic"
version = "0.1.0"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.16", features = ["full"]}
psn_api_rs = { path = "../../" }